setuprouting, implement example for databinding and component interaction

--- a/src/components/app/app.component.html
+++ b/src/components/app/app.component.html
@@ -1,1 +1,22 @@
-<div>hello world</div>
+<div>
+  <h2>Angular examples</h2>
+  <span>See the following list for the topics:</span>
+
+  <div class="navigation">
+    <ul>
+      <li><a routerLink="/databinding" routerLinkActive="active">Databinding</a></li>
+      <li><a routerLink="/component-interaction" routerLinkActive="active">Component interaction</a></li>
+    </ul>
+  </div>
+
+  <router-outlet></router-outlet>
+</div>
+
+<!-- component interaction: pass value from child to parent-->
+<!--// ng bootstrap-->
+<!--// directives: ngif ngfor, eigene directive-->
+<!--//pipes: angular & eigene-->
+<!--//services-->
+<!--// http services-->
+<!--// routing-->
+<!--// testing-->
