--- a/src/components/component-interaction/child/child.component.html
+++ b/src/components/component-interaction/child/child.component.html
@@ -6,5 +6,5 @@
   <br><br>
   <span>The following action is handled by the parent:</span>
   <br><br>
-  <button (click)="changeParentBackground()">Click me</button>
+  <button class="btn btn-outline-dark" (click)="changeParentBackground()">Click me</button>
 </div>
