--- a/src/components/component-interaction/component-interaction.component.html
+++ b/src/components/component-interaction/component-interaction.component.html
@@ -1,4 +1,4 @@
-<div [ngClass]="{'background-red': redBackground, 'background-blue': !redBackground}">
+<div class="app-component" [ngClass]="{'background-red': redBackground, 'background-blue': !redBackground}">
   <h3>Component interaction</h3>
   <span>Data can be passed down from parent to child component.</span><br>
   <span>Events triggered in a child component can be passed up to be handled in a parent component.</span>
