added routing component

--- a/src/components/app/app.component.html
+++ b/src/components/app/app.component.html
@@ -14,16 +14,17 @@
     <li class="nav-item">
       <a class="nav-link" routerLink="/bootstrap" routerLinkActive="active">Bootstrap</a>
     </li>
+    <li class="nav-item">
+      <a class="nav-link" routerLink="/routing" routerLinkActive="active">Routing</a>
+    </li>
   </ul>
 
   <router-outlet></router-outlet>
 </div>
 
 <!-- component interaction: pass value from child to parent-->
-<!--// ng bootstrap-->
 <!--// directives: ngif ngfor, eigene directive-->
 <!--//pipes: angular & eigene-->
 <!--//services-->
 <!--// http services-->
-<!--// routing-->
 <!--// testing-->
