--- a/src/components/app/app.component.html
+++ b/src/components/app/app.component.html
@@ -9,6 +9,9 @@
       <a class="nav-link" routerLink="/databinding" routerLinkActive="active">Databinding</a>
     </li>
     <li class="nav-item">
+      <a class="nav-link" routerLink="/directives" routerLinkActive="active">Directives</a>
+    </li>
+    <li class="nav-item">
       <a class="nav-link" routerLink="/component-interaction" routerLinkActive="active">Component interaction</a>
     </li>
     <li class="nav-item">
