--- a/src/components/app/app.component.html
+++ b/src/components/app/app.component.html
@@ -12,6 +12,9 @@
       <a class="nav-link" routerLink="/directives" routerLinkActive="active">Directives</a>
     </li>
     <li class="nav-item">
+      <a class="nav-link" routerLink="/pipes" routerLinkActive="active">Pipes</a>
+    </li>
+    <li class="nav-item">
       <a class="nav-link" routerLink="/component-interaction" routerLinkActive="active">Component interaction</a>
     </li>
     <li class="nav-item">
@@ -26,7 +29,6 @@
 </div>
 
 <!-- component interaction: pass value from child to parent-->
-<!--// directives: ngif ngfor, eigene directive-->
 <!--//pipes: angular & eigene-->
 <!--//services-->
 <!--// http services-->
