added service sample

--- a/src/components/app/app.component.html
+++ b/src/components/app/app.component.html
@@ -21,6 +21,9 @@
       <a class="nav-link" routerLink="/bootstrap" routerLinkActive="active">Bootstrap</a>
     </li>
     <li class="nav-item">
+      <a class="nav-link" routerLink="/services" routerLinkActive="active">Services</a>
+    </li>
+    <li class="nav-item">
       <a class="nav-link" routerLink="/routing" routerLinkActive="active">Routing</a>
     </li>
   </ul>
@@ -29,7 +32,5 @@
 </div>
 
 <!-- component interaction: pass value from child to parent-->
-<!--//pipes: angular & eigene-->
-<!--//services-->
 <!--// http services-->
 <!--// testing-->
