--- a/src/components/app/app.component.html
+++ b/src/components/app/app.component.html
@@ -6,7 +6,7 @@
 
   <ul class="nav nav-tabs">
     <li class="nav-item">
-      <a class="nav-link" routerLink="/databinding" routerLinkActive="active">Databinding</a>
+      <a class="nav-link" routerLink="/data-binding" routerLinkActive="active">Databinding</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" routerLink="/directives" routerLinkActive="active">Directives</a>
@@ -24,6 +24,9 @@
       <a class="nav-link" routerLink="/services" routerLinkActive="active">Services</a>
     </li>
     <li class="nav-item">
+      <a class="nav-link" routerLink="/http" routerLinkActive="active">Http</a>
+    </li>
+    <li class="nav-item">
       <a class="nav-link" routerLink="/routing" routerLinkActive="active">Routing</a>
     </li>
   </ul>
@@ -32,5 +35,5 @@
 </div>
 
 <!-- component interaction: pass value from child to parent-->
-<!--// http services-->
-<!--// testing-->
+<!-- testing-->
+<!-- advanced routing -->
