--- a/src/components/app/app.component.html
+++ b/src/components/app/app.component.html
@@ -29,11 +29,12 @@
     <li class="nav-item">
       <a class="nav-link" routerLink="/routing" routerLinkActive="active">Routing</a>
     </li>
+    <li class="nav-item">
+      <a class="nav-link" routerLink="/testing" routerLinkActive="active">Testing</a>
+    </li>
   </ul>
 
   <router-outlet></router-outlet>
 </div>
 
-<!-- component interaction: pass value from child to parent-->
-<!-- testing-->
-<!-- advanced routing -->
+<!-- Todo: enhance component interaction and routing -->
